deployment/base/jenkins.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/component: controller
spec:
  revisionHistoryLimit: 1
  serviceName: jenkins
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jenkins
      app.kubernetes.io/instance: jenkins
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jenkins
        app.kubernetes.io/instance: jenkins
        app.kubernetes.io/component: controller
      annotations:
        prometheus.io/port: "8081"
        prometheus.io/scrape: "true"
    spec:
      shareProcessNamespace: false
      serviceAccountName: jenkins
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: jenkins
          image: docker.io/saidsef/alpine-jenkins-dockerfile:v2026.07
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 8080
              name: tcp
            - protocol: TCP
              containerPort: 8081
              name: prometheus
          volumeMounts:
            - name: storage
              mountPath: /var/jenkins_home/logs
              subPath: logs
            - name: storage
              mountPath: /var/jenkins_home/jobs
              subPath: jobs
            - name: storage
              mountPath: /var/jenkins_home/cache
              subPath: cache
            - name: storage
              mountPath: /var/jenkins_home/jenkins-jobs
              subPath: jenkins-jobs
            - name: storage
              mountPath: /var/jenkins_home/builds
              subPath: builds
            - name: storage
              mountPath: /var/jenkins_home/secrets
              subPath: secrets
          startupProbe:
            httpGet:
              path: /login
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 60
            successThreshold: 1
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /login
              port: 8080
            periodSeconds: 10
            failureThreshold: 5
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /login
              port: 8080
            periodSeconds: 10
            failureThreshold: 3
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "500m"
              memory: "3Gi"
              ephemeral-storage: "4Gi"
            limits:
              cpu: "900m"
              memory: "3Gi"
              ephemeral-storage: "8Gi"
          securityContext:
            allowPrivilegeEscalation: false
            runAsGroup: 1000
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
      volumes:
        - name: storage
          emptyDir:
            sizeLimit: 3Gi
