deployment/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
    app.kubernetes.io/component: controller
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/instance: jenkins
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: tcp
